tests/paczka1/small_fuzzy/91924946.err
Error in line 8: CTsM S877 60,8
Error in line 13: CTsM A76 8,6
